y.output
Nonterminals useless in grammar

    condition


Terminals unused in grammar

    OPENBRACE
    CLOSEBRACE


Rules useless in grammar

  110 condition: expression
  111          | NOT condition
  112          | OPENPAREN condition CLOSEPAREN
  113          | B_TRUE
  114          | B_FALSE


Rules useless in parser due to conflicts

   12 $@5: ε

   52 stat_list: stat


State 11 conflicts: 2 reduce/reduce
State 71 conflicts: 2 reduce/reduce
State 138 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 182 conflicts: 1 shift/reduce
State 202 conflicts: 1 shift/reduce
State 218 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function_list function_item
    3              | function_item

    4 function_item: function
    5              | main_function

    6 $@1: ε

    7 $@2: ε

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 parameter_list CLOSEPAREN $@2 COLON opt_var BEGIN_T stat_list END

    9 $@3: ε

   10 $@4: ε

   11 function: DEF ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T stat_list return_stat END

   12 $@5: ε

   13 $@6: ε

   14 function: DEF ID OPENPAREN $@5 parameter_list CLOSEPAREN $@6 COLON opt_var BEGIN_T stat_list END

   15 returns_spec: RETURNS type
   16             | ε

   17 parameter_list: ε
   18               | param_decl_list

   19 param_decl_list: param_decl
   20                | param_decl_list SEMICOLON param_decl

   21 $@7: ε

   22 param_decl: PAR $@7 type COLON ID

   23 type: INT
   24     | BOOL
   25     | CHAR
   26     | REAL
   27     | STRING
   28     | INTPTR
   29     | CHARPTR
   30     | REALPTR

   31 opt_var: ε
   32        | VAR var_decl_list

   33 var_decl_list: var_decl
   34              | var_decl_list var_decl

   35 $@8: ε

   36 var_decl: TYPE type COLON $@8 var_item_list SEMICOLON

   37 var_item_list: var_item
   38              | var_item_list COMMA var_item

   39 var_item: ID
   40         | ID COLON literal
   41         | ID OPENBRACKET DEC_LIT CLOSEBRACKET
   42         | ID OPENBRACKET DEC_LIT CLOSEBRACKET COLON STRING_LIT

   43 literal: DEC_LIT
   44        | B_TRUE
   45        | B_FALSE
   46        | CHAR_LIT
   47        | STRING_LIT
   48        | HEX_LIT
   49        | REAL_LIT
   50        | NULLL

   51 stat_list: ε
   52          | stat
   53          | stat stat_list

   54 stat: function
   55     | assignment_stat
   56     | if_stat
   57     | while_stat
   58     | for_stat
   59     | do_while_stat
   60     | block_stat
   61     | call_stat

   62 call_stat: ID ASSIGNMENT CALL ID OPENPAREN expression_list CLOSEPAREN SEMICOLON
   63          | ID ASSIGNMENT CALL ID OPENPAREN CLOSEPAREN SEMICOLON
   64          | CALL ID OPENPAREN expression_list CLOSEPAREN SEMICOLON
   65          | CALL ID OPENPAREN CLOSEPAREN SEMICOLON

   66 if_stat: IF expression COLON block_stat
   67        | IF expression COLON block_stat ELSE COLON block_stat
   68        | IF expression COLON block_stat ELIF expression COLON block_stat
   69        | IF expression COLON block_stat ELIF expression COLON block_stat ELSE COLON block_stat

   70 while_stat: WHILE expression COLON block_stat

   71 do_while_stat: DO COLON block_stat WHILE expression SEMICOLON

   72 for_stat: FOR for_header COLON block_stat
   73         | FOR for_header COLON opt_var block_stat

   74 for_header: OPENPAREN ID ASSIGNMENT expression SEMICOLON expression SEMICOLON update_exp CLOSEPAREN

   75 update_exp: ID ASSIGNMENT expression

   76 block_stat: BEGIN_T stat_list END

   77 assignment_stat: ID ASSIGNMENT expression SEMICOLON
   78                | ID OPENBRACKET expression CLOSEBRACKET ASSIGNMENT CHAR_LIT SEMICOLON
   79                | MULTI ID ASSIGNMENT expression SEMICOLON
   80                | ID ASSIGNMENT ADDRESS ID SEMICOLON
   81                | ID ASSIGNMENT NULLL SEMICOLON
   82                | ID OPENBRACKET expression CLOSEBRACKET ASSIGNMENT expression SEMICOLON

   83 return_stat: RETURN expression SEMICOLON
   84            | ε

   85 expression_list: expression
   86                | expression COMMA expression_list

   87 expression: expression PLUS expression
   88           | expression MINUS expression
   89           | expression MULTI expression
   90           | expression DIV expression
   91           | expression AND expression
   92           | expression OR expression
   93           | expression EQL expression
   94           | expression NOT_EQL expression
   95           | expression GREATER expression
   96           | expression GREATER_EQL expression
   97           | expression LESS expression
   98           | expression LESS_EQL expression
   99           | NOT expression
  100           | MINUS expression
  101           | ADDRESS ID
  102           | ADDRESS ID OPENBRACKET expression CLOSEBRACKET
  103           | MULTI ID
  104           | LENGTH ID LENGTH
  105           | OPENPAREN expression CLOSEPAREN
  106           | ID
  107           | ID OPENBRACKET expression CLOSEBRACKET
  108           | CALL ID OPENPAREN parameter_list CLOSEPAREN
  109           | literal


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BOOL <str> (258) 24
    CHAR <str> (259) 25
    INT <str> (260) 23
    REAL <str> (261) 26
    STRING <str> (262) 27
    INTPTR <str> (263) 28
    CHARPTR <str> (264) 29
    REALPTR <str> (265) 30
    TYPE <str> (266) 36
    IF <str> (267) 66 67 68 69
    ELIF <str> (268) 68 69
    ELSE <str> (269) 67 69
    WHILE <str> (270) 70 71
    FOR <str> (271) 72 73
    VAR <str> (272) 32
    PAR <str> (273) 22
    RETURN <str> (274) 83
    NULLL <str> (275) 50 81
    DO <str> (276) 71
    RETURNS <str> (277) 15
    BEGIN_T <str> (278) 8 11 14 76
    END <str> (279) 8 11 14 76
    DEF <str> (280) 8 11 14
    CALL <str> (281) 62 63 64 65 108
    AND <str> (282) 91
    NOT <str> (283) 99
    OR <str> (284) 92
    DIV <str> (285) 90
    ASSIGNMENT <str> (286) 62 63 74 75 77 78 79 80 81 82
    EQL <str> (287) 93
    GREATER <str> (288) 95
    GREATER_EQL <str> (289) 96
    LESS <str> (290) 97
    LESS_EQL <str> (291) 98
    MINUS <str> (292) 88 100
    NOT_EQL <str> (293) 94
    PLUS <str> (294) 87
    MULTI <str> (295) 79 89 103
    ADDRESS <str> (296) 80 101 102
    LENGTH <str> (297) 104
    SEMICOLON <str> (298) 20 36 62 63 64 65 71 74 77 78 79 80 81 82 83
    COLON <str> (299) 8 11 14 22 36 40 42 66 67 68 69 70 71 72 73
    COMMA <str> (300) 38 86
    OPENBRACE <str> (301)
    CLOSEBRACE <str> (302)
    OPENPAREN <str> (303) 8 11 14 62 63 64 65 74 105 108
    CLOSEPAREN <str> (304) 8 11 14 62 63 64 65 74 105 108
    OPENBRACKET <str> (305) 41 42 78 82 102 107
    CLOSEBRACKET <str> (306) 41 42 78 82 102 107
    B_TRUE <str> (307) 44
    B_FALSE <str> (308) 45
    CHAR_LIT <str> (309) 46 78
    STRING_LIT <str> (310) 42 47
    DEC_LIT <str> (311) 41 42 43
    HEX_LIT <str> (312) 48
    REAL_LIT <str> (313) 49
    ID <str> (314) 11 14 22 39 40 41 42 62 63 64 65 74 75 77 78 79 80 81 82 101 102 103 104 106 107 108
    MAIN_FUNC <str> (315) 8


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    program <node> (62)
        on left: 1
        on right: 0
    function_list <node> (63)
        on left: 2 3
        on right: 1 2
    function_item <node> (64)
        on left: 4 5
        on right: 2 3
    main_function <node> (65)
        on left: 8
        on right: 5
    $@1 (66)
        on left: 6
        on right: 8
    $@2 (67)
        on left: 7
        on right: 8
    function <node> (68)
        on left: 11 14
        on right: 4 54
    $@3 (69)
        on left: 9
        on right: 11
    $@4 (70)
        on left: 10
        on right: 11
    $@5 (71)
        on left: 12
        on right: 14
    $@6 (72)
        on left: 13
        on right: 14
    returns_spec <node> (73)
        on left: 15 16
        on right: 11
    parameter_list <node> (74)
        on left: 17 18
        on right: 8 11 14 108
    param_decl_list <node> (75)
        on left: 19 20
        on right: 18 20
    param_decl <node> (76)
        on left: 22
        on right: 19 20
    $@7 (77)
        on left: 21
        on right: 22
    type <node> (78)
        on left: 23 24 25 26 27 28 29 30
        on right: 15 22 36
    opt_var <node> (79)
        on left: 31 32
        on right: 8 11 14 73
    var_decl_list <node> (80)
        on left: 33 34
        on right: 32 34
    var_decl <node> (81)
        on left: 36
        on right: 33 34
    $@8 (82)
        on left: 35
        on right: 36
    var_item_list <node> (83)
        on left: 37 38
        on right: 36 38
    var_item <node> (84)
        on left: 39 40 41 42
        on right: 37 38
    literal <node> (85)
        on left: 43 44 45 46 47 48 49 50
        on right: 40 109
    stat_list <node> (86)
        on left: 51 52 53
        on right: 8 11 14 53 76
    stat <node> (87)
        on left: 54 55 56 57 58 59 60 61
        on right: 52 53
    call_stat <node> (88)
        on left: 62 63 64 65
        on right: 61
    if_stat <node> (89)
        on left: 66 67 68 69
        on right: 56
    while_stat <node> (90)
        on left: 70
        on right: 57
    do_while_stat <node> (91)
        on left: 71
        on right: 59
    for_stat <node> (92)
        on left: 72 73
        on right: 58
    for_header <node> (93)
        on left: 74
        on right: 72 73
    update_exp <node> (94)
        on left: 75
        on right: 74
    block_stat <node> (95)
        on left: 76
        on right: 60 66 67 68 69 70 71 72 73
    assignment_stat <node> (96)
        on left: 77 78 79 80 81 82
        on right: 55
    return_stat <node> (97)
        on left: 83 84
        on right: 11
    expression_list <node> (98)
        on left: 85 86
        on right: 62 64 86
    expression <node> (99)
        on left: 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 66 67 68 69 70 71 74 75 77 78 79 82 83 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 102 105 107


State 0

    0 $accept: • program $end

    DEF  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function_item  go to state 4
    main_function  go to state 5
    function       go to state 6


State 1

    8 main_function: DEF • MAIN_FUNC OPENPAREN $@1 parameter_list CLOSEPAREN $@2 COLON opt_var BEGIN_T stat_list END
   11 function: DEF • ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T stat_list return_stat END
   14         | DEF • ID OPENPAREN $@5 parameter_list CLOSEPAREN $@6 COLON opt_var BEGIN_T stat_list END

    ID         shift, and go to state 7
    MAIN_FUNC  shift, and go to state 8


State 2

    0 $accept: program • $end

    $end  shift, and go to state 9


State 3

    1 program: function_list •
    2 function_list: function_list • function_item

    DEF  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function_item  go to state 10
    main_function  go to state 5
    function       go to state 6


State 4

    3 function_list: function_item •

    $default  reduce using rule 3 (function_list)


State 5

    5 function_item: main_function •

    $default  reduce using rule 5 (function_item)


State 6

    4 function_item: function •

    $default  reduce using rule 4 (function_item)


State 7

   11 function: DEF ID • OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T stat_list return_stat END
   14         | DEF ID • OPENPAREN $@5 parameter_list CLOSEPAREN $@6 COLON opt_var BEGIN_T stat_list END

    OPENPAREN  shift, and go to state 11


State 8

    8 main_function: DEF MAIN_FUNC • OPENPAREN $@1 parameter_list CLOSEPAREN $@2 COLON opt_var BEGIN_T stat_list END

    OPENPAREN  shift, and go to state 12


State 9

    0 $accept: program $end •

    $default  accept


State 10

    2 function_list: function_list function_item •

    $default  reduce using rule 2 (function_list)


State 11

   11 function: DEF ID OPENPAREN • $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T stat_list return_stat END
   14         | DEF ID OPENPAREN • $@5 parameter_list CLOSEPAREN $@6 COLON opt_var BEGIN_T stat_list END

    PAR         reduce using rule 9 ($@3)
    PAR         [reduce using rule 12 ($@5)]
    CLOSEPAREN  reduce using rule 9 ($@3)
    CLOSEPAREN  [reduce using rule 12 ($@5)]
    $default    reduce using rule 9 ($@3)

    $@3  go to state 13
    $@5  go to state 14


State 12

    8 main_function: DEF MAIN_FUNC OPENPAREN • $@1 parameter_list CLOSEPAREN $@2 COLON opt_var BEGIN_T stat_list END

    $default  reduce using rule 6 ($@1)

    $@1  go to state 15


State 13

   11 function: DEF ID OPENPAREN $@3 • parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T stat_list return_stat END

    PAR  shift, and go to state 16

    $default  reduce using rule 17 (parameter_list)

    parameter_list   go to state 17
    param_decl_list  go to state 18
    param_decl       go to state 19


State 14

   14 function: DEF ID OPENPAREN $@5 • parameter_list CLOSEPAREN $@6 COLON opt_var BEGIN_T stat_list END

    PAR  shift, and go to state 16

    $default  reduce using rule 17 (parameter_list)

    parameter_list   go to state 20
    param_decl_list  go to state 18
    param_decl       go to state 19


State 15

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 • parameter_list CLOSEPAREN $@2 COLON opt_var BEGIN_T stat_list END

    PAR  shift, and go to state 16

    $default  reduce using rule 17 (parameter_list)

    parameter_list   go to state 21
    param_decl_list  go to state 18
    param_decl       go to state 19


State 16

   22 param_decl: PAR • $@7 type COLON ID

    $default  reduce using rule 21 ($@7)

    $@7  go to state 22


State 17

   11 function: DEF ID OPENPAREN $@3 parameter_list • CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T stat_list return_stat END

    CLOSEPAREN  shift, and go to state 23


State 18

   18 parameter_list: param_decl_list •
   20 param_decl_list: param_decl_list • SEMICOLON param_decl

    SEMICOLON  shift, and go to state 24

    $default  reduce using rule 18 (parameter_list)


State 19

   19 param_decl_list: param_decl •

    $default  reduce using rule 19 (param_decl_list)


State 20

   14 function: DEF ID OPENPAREN $@5 parameter_list • CLOSEPAREN $@6 COLON opt_var BEGIN_T stat_list END

    CLOSEPAREN  shift, and go to state 25


State 21

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 parameter_list • CLOSEPAREN $@2 COLON opt_var BEGIN_T stat_list END

    CLOSEPAREN  shift, and go to state 26


State 22

   22 param_decl: PAR $@7 • type COLON ID

    BOOL     shift, and go to state 27
    CHAR     shift, and go to state 28
    INT      shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    INTPTR   shift, and go to state 32
    CHARPTR  shift, and go to state 33
    REALPTR  shift, and go to state 34

    type  go to state 35


State 23

   11 function: DEF ID OPENPAREN $@3 parameter_list CLOSEPAREN • $@4 COLON returns_spec opt_var BEGIN_T stat_list return_stat END

    $default  reduce using rule 10 ($@4)

    $@4  go to state 36


State 24

   20 param_decl_list: param_decl_list SEMICOLON • param_decl

    PAR  shift, and go to state 16

    param_decl  go to state 37


State 25

   14 function: DEF ID OPENPAREN $@5 parameter_list CLOSEPAREN • $@6 COLON opt_var BEGIN_T stat_list END

    $default  reduce using rule 13 ($@6)

    $@6  go to state 38


State 26

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 parameter_list CLOSEPAREN • $@2 COLON opt_var BEGIN_T stat_list END

    $default  reduce using rule 7 ($@2)

    $@2  go to state 39


State 27

   24 type: BOOL •

    $default  reduce using rule 24 (type)


State 28

   25 type: CHAR •

    $default  reduce using rule 25 (type)


State 29

   23 type: INT •

    $default  reduce using rule 23 (type)


State 30

   26 type: REAL •

    $default  reduce using rule 26 (type)


State 31

   27 type: STRING •

    $default  reduce using rule 27 (type)


State 32

   28 type: INTPTR •

    $default  reduce using rule 28 (type)


State 33

   29 type: CHARPTR •

    $default  reduce using rule 29 (type)


State 34

   30 type: REALPTR •

    $default  reduce using rule 30 (type)


State 35

   22 param_decl: PAR $@7 type • COLON ID

    COLON  shift, and go to state 40


State 36

   11 function: DEF ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 • COLON returns_spec opt_var BEGIN_T stat_list return_stat END

    COLON  shift, and go to state 41


State 37

   20 param_decl_list: param_decl_list SEMICOLON param_decl •

    $default  reduce using rule 20 (param_decl_list)


State 38

   14 function: DEF ID OPENPAREN $@5 parameter_list CLOSEPAREN $@6 • COLON opt_var BEGIN_T stat_list END

    COLON  shift, and go to state 42


State 39

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 parameter_list CLOSEPAREN $@2 • COLON opt_var BEGIN_T stat_list END

    COLON  shift, and go to state 43


State 40

   22 param_decl: PAR $@7 type COLON • ID

    ID  shift, and go to state 44


State 41

   11 function: DEF ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON • returns_spec opt_var BEGIN_T stat_list return_stat END

    RETURNS  shift, and go to state 45

    $default  reduce using rule 16 (returns_spec)

    returns_spec  go to state 46


State 42

   14 function: DEF ID OPENPAREN $@5 parameter_list CLOSEPAREN $@6 COLON • opt_var BEGIN_T stat_list END

    VAR  shift, and go to state 47

    $default  reduce using rule 31 (opt_var)

    opt_var  go to state 48


State 43

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 parameter_list CLOSEPAREN $@2 COLON • opt_var BEGIN_T stat_list END

    VAR  shift, and go to state 47

    $default  reduce using rule 31 (opt_var)

    opt_var  go to state 49


State 44

   22 param_decl: PAR $@7 type COLON ID •

    $default  reduce using rule 22 (param_decl)


State 45

   15 returns_spec: RETURNS • type

    BOOL     shift, and go to state 27
    CHAR     shift, and go to state 28
    INT      shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    INTPTR   shift, and go to state 32
    CHARPTR  shift, and go to state 33
    REALPTR  shift, and go to state 34

    type  go to state 50


State 46

   11 function: DEF ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec • opt_var BEGIN_T stat_list return_stat END

    VAR  shift, and go to state 47

    $default  reduce using rule 31 (opt_var)

    opt_var  go to state 51


State 47

   32 opt_var: VAR • var_decl_list

    TYPE  shift, and go to state 52

    var_decl_list  go to state 53
    var_decl       go to state 54


State 48

   14 function: DEF ID OPENPAREN $@5 parameter_list CLOSEPAREN $@6 COLON opt_var • BEGIN_T stat_list END

    BEGIN_T  shift, and go to state 55


State 49

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 parameter_list CLOSEPAREN $@2 COLON opt_var • BEGIN_T stat_list END

    BEGIN_T  shift, and go to state 56


State 50

   15 returns_spec: RETURNS type •

    $default  reduce using rule 15 (returns_spec)


State 51

   11 function: DEF ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var • BEGIN_T stat_list return_stat END

    BEGIN_T  shift, and go to state 57


State 52

   36 var_decl: TYPE • type COLON $@8 var_item_list SEMICOLON

    BOOL     shift, and go to state 27
    CHAR     shift, and go to state 28
    INT      shift, and go to state 29
    REAL     shift, and go to state 30
    STRING   shift, and go to state 31
    INTPTR   shift, and go to state 32
    CHARPTR  shift, and go to state 33
    REALPTR  shift, and go to state 34

    type  go to state 58


State 53

   32 opt_var: VAR var_decl_list •
   34 var_decl_list: var_decl_list • var_decl

    TYPE  shift, and go to state 52

    $default  reduce using rule 32 (opt_var)

    var_decl  go to state 59


State 54

   33 var_decl_list: var_decl •

    $default  reduce using rule 33 (var_decl_list)


State 55

   14 function: DEF ID OPENPAREN $@5 parameter_list CLOSEPAREN $@6 COLON opt_var BEGIN_T • stat_list END

    IF       shift, and go to state 60
    WHILE    shift, and go to state 61
    FOR      shift, and go to state 62
    DO       shift, and go to state 63
    BEGIN_T  shift, and go to state 64
    DEF      shift, and go to state 65
    CALL     shift, and go to state 66
    MULTI    shift, and go to state 67
    ID       shift, and go to state 68

    $default  reduce using rule 51 (stat_list)

    function         go to state 69
    stat_list        go to state 70
    stat             go to state 71
    call_stat        go to state 72
    if_stat          go to state 73
    while_stat       go to state 74
    do_while_stat    go to state 75
    for_stat         go to state 76
    block_stat       go to state 77
    assignment_stat  go to state 78


State 56

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 parameter_list CLOSEPAREN $@2 COLON opt_var BEGIN_T • stat_list END

    IF       shift, and go to state 60
    WHILE    shift, and go to state 61
    FOR      shift, and go to state 62
    DO       shift, and go to state 63
    BEGIN_T  shift, and go to state 64
    DEF      shift, and go to state 65
    CALL     shift, and go to state 66
    MULTI    shift, and go to state 67
    ID       shift, and go to state 68

    $default  reduce using rule 51 (stat_list)

    function         go to state 69
    stat_list        go to state 79
    stat             go to state 71
    call_stat        go to state 72
    if_stat          go to state 73
    while_stat       go to state 74
    do_while_stat    go to state 75
    for_stat         go to state 76
    block_stat       go to state 77
    assignment_stat  go to state 78


State 57

   11 function: DEF ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T • stat_list return_stat END

    IF       shift, and go to state 60
    WHILE    shift, and go to state 61
    FOR      shift, and go to state 62
    DO       shift, and go to state 63
    BEGIN_T  shift, and go to state 64
    DEF      shift, and go to state 65
    CALL     shift, and go to state 66
    MULTI    shift, and go to state 67
    ID       shift, and go to state 68

    $default  reduce using rule 51 (stat_list)

    function         go to state 69
    stat_list        go to state 80
    stat             go to state 71
    call_stat        go to state 72
    if_stat          go to state 73
    while_stat       go to state 74
    do_while_stat    go to state 75
    for_stat         go to state 76
    block_stat       go to state 77
    assignment_stat  go to state 78


State 58

   36 var_decl: TYPE type • COLON $@8 var_item_list SEMICOLON

    COLON  shift, and go to state 81


State 59

   34 var_decl_list: var_decl_list var_decl •

    $default  reduce using rule 34 (var_decl_list)


State 60

   66 if_stat: IF • expression COLON block_stat
   67        | IF • expression COLON block_stat ELSE COLON block_stat
   68        | IF • expression COLON block_stat ELIF expression COLON block_stat
   69        | IF • expression COLON block_stat ELIF expression COLON block_stat ELSE COLON block_stat

    NULLL       shift, and go to state 82
    CALL        shift, and go to state 83
    NOT         shift, and go to state 84
    MINUS       shift, and go to state 85
    MULTI       shift, and go to state 86
    ADDRESS     shift, and go to state 87
    LENGTH      shift, and go to state 88
    OPENPAREN   shift, and go to state 89
    B_TRUE      shift, and go to state 90
    B_FALSE     shift, and go to state 91
    CHAR_LIT    shift, and go to state 92
    STRING_LIT  shift, and go to state 93
    DEC_LIT     shift, and go to state 94
    HEX_LIT     shift, and go to state 95
    REAL_LIT    shift, and go to state 96
    ID          shift, and go to state 97

    literal     go to state 98
    expression  go to state 99


State 61

   70 while_stat: WHILE • expression COLON block_stat

    NULLL       shift, and go to state 82
    CALL        shift, and go to state 83
    NOT         shift, and go to state 84
    MINUS       shift, and go to state 85
    MULTI       shift, and go to state 86
    ADDRESS     shift, and go to state 87
    LENGTH      shift, and go to state 88
    OPENPAREN   shift, and go to state 89
    B_TRUE      shift, and go to state 90
    B_FALSE     shift, and go to state 91
    CHAR_LIT    shift, and go to state 92
    STRING_LIT  shift, and go to state 93
    DEC_LIT     shift, and go to state 94
    HEX_LIT     shift, and go to state 95
    REAL_LIT    shift, and go to state 96
    ID          shift, and go to state 97

    literal     go to state 98
    expression  go to state 100


State 62

   72 for_stat: FOR • for_header COLON block_stat
   73         | FOR • for_header COLON opt_var block_stat

    OPENPAREN  shift, and go to state 101

    for_header  go to state 102


State 63

   71 do_while_stat: DO • COLON block_stat WHILE expression SEMICOLON

    COLON  shift, and go to state 103


State 64

   76 block_stat: BEGIN_T • stat_list END

    IF       shift, and go to state 60
    WHILE    shift, and go to state 61
    FOR      shift, and go to state 62
    DO       shift, and go to state 63
    BEGIN_T  shift, and go to state 64
    DEF      shift, and go to state 65
    CALL     shift, and go to state 66
    MULTI    shift, and go to state 67
    ID       shift, and go to state 68

    $default  reduce using rule 51 (stat_list)

    function         go to state 69
    stat_list        go to state 104
    stat             go to state 71
    call_stat        go to state 72
    if_stat          go to state 73
    while_stat       go to state 74
    do_while_stat    go to state 75
    for_stat         go to state 76
    block_stat       go to state 77
    assignment_stat  go to state 78


State 65

   11 function: DEF • ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T stat_list return_stat END
   14         | DEF • ID OPENPAREN $@5 parameter_list CLOSEPAREN $@6 COLON opt_var BEGIN_T stat_list END

    ID  shift, and go to state 7


State 66

   64 call_stat: CALL • ID OPENPAREN expression_list CLOSEPAREN SEMICOLON
   65          | CALL • ID OPENPAREN CLOSEPAREN SEMICOLON

    ID  shift, and go to state 105


State 67

   79 assignment_stat: MULTI • ID ASSIGNMENT expression SEMICOLON

    ID  shift, and go to state 106


State 68

   62 call_stat: ID • ASSIGNMENT CALL ID OPENPAREN expression_list CLOSEPAREN SEMICOLON
   63          | ID • ASSIGNMENT CALL ID OPENPAREN CLOSEPAREN SEMICOLON
   77 assignment_stat: ID • ASSIGNMENT expression SEMICOLON
   78                | ID • OPENBRACKET expression CLOSEBRACKET ASSIGNMENT CHAR_LIT SEMICOLON
   80                | ID • ASSIGNMENT ADDRESS ID SEMICOLON
   81                | ID • ASSIGNMENT NULLL SEMICOLON
   82                | ID • OPENBRACKET expression CLOSEBRACKET ASSIGNMENT expression SEMICOLON

    ASSIGNMENT   shift, and go to state 107
    OPENBRACKET  shift, and go to state 108


State 69

   54 stat: function •

    $default  reduce using rule 54 (stat)


State 70

   14 function: DEF ID OPENPAREN $@5 parameter_list CLOSEPAREN $@6 COLON opt_var BEGIN_T stat_list • END

    END  shift, and go to state 109


State 71

   52 stat_list: stat •
   53          | stat • stat_list

    IF       shift, and go to state 60
    WHILE    shift, and go to state 61
    FOR      shift, and go to state 62
    DO       shift, and go to state 63
    BEGIN_T  shift, and go to state 64
    DEF      shift, and go to state 65
    CALL     shift, and go to state 66
    MULTI    shift, and go to state 67
    ID       shift, and go to state 68

    RETURN    reduce using rule 51 (stat_list)
    RETURN    [reduce using rule 52 (stat_list)]
    END       reduce using rule 51 (stat_list)
    END       [reduce using rule 52 (stat_list)]
    $default  reduce using rule 51 (stat_list)

    function         go to state 69
    stat_list        go to state 110
    stat             go to state 71
    call_stat        go to state 72
    if_stat          go to state 73
    while_stat       go to state 74
    do_while_stat    go to state 75
    for_stat         go to state 76
    block_stat       go to state 77
    assignment_stat  go to state 78


State 72

   61 stat: call_stat •

    $default  reduce using rule 61 (stat)


State 73

   56 stat: if_stat •

    $default  reduce using rule 56 (stat)


State 74

   57 stat: while_stat •

    $default  reduce using rule 57 (stat)


State 75

   59 stat: do_while_stat •

    $default  reduce using rule 59 (stat)


State 76

   58 stat: for_stat •

    $default  reduce using rule 58 (stat)


State 77

   60 stat: block_stat •

    $default  reduce using rule 60 (stat)


State 78

   55 stat: assignment_stat •

    $default  reduce using rule 55 (stat)


State 79

    8 main_function: DEF MAIN_FUNC OPENPAREN $@1 parameter_list CLOSEPAREN $@2 COLON opt_var BEGIN_T stat_list • END

    END  shift, and go to state 111


State 80

   11 function: DEF ID OPENPAREN $@3 parameter_list CLOSEPAREN $@4 COLON returns_spec opt_var BEGIN_T stat_list • return_stat END

    RETURN  shift, and go to state 112

    $default  reduce using rule 84 (return_stat)

    return_stat  go to state 113


State 81

   36 var_decl: TYPE type COLON • $@8 var_item_list SEMICOLON

    $default  reduce using rule 35 ($@8)

    $@8  go to state 114


State 82

   50 literal: NULLL •

    $default  reduce using rule 50 (literal)


State 83

  108 expression: CALL • ID OPENPAREN parameter_list CLOSEPAREN

    ID  shift, and go to state 115


State 84

   99 expression: NOT • expression

    NULLL       shift, and go to state 82
    CALL        shift, and go to state 83
    NOT         shift, and go to state 84
    MINUS       shift, and go to state 85
    MULTI       shift, and go to state 86
    ADDRESS     shift, and go to state 87
    LENGTH      shift, and go to state 88
    OPENPAREN   shift, and go to state 89
    B_TRUE      shift, and go to state 90
    B_FALSE     shift, and go to state 91
    CHAR_LIT    shift, and go to state 92
    STRING_LIT  shift, and go to state 93
    DEC_LIT     shift, and go to state 94
    HEX_LIT     shift, and go to state 95
    REAL_LIT    shift, and go to state 96
    ID          shift, and go to state 97

    literal     go to state 98
    expression  go to state 116


State 85

  100 expression: MINUS • expression

    NULLL       shift, and go to state 82
    CALL        shift, and go to state 83
    NOT         shift, and go to state 84
    MINUS       shift, and go to state 85
    MULTI       shift, and go to state 86
    ADDRESS     shift, and go to state 87
    LENGTH      shift, and go to state 88
    OPENPAREN   shift, and go to state 89
    B_TRUE      shift, and go to state 90
    B_FALSE     shift, and go to state 91
    CHAR_LIT    shift, and go to state 92
    STRING_LIT  shift, and go to state 93
    DEC_LIT     shift, and go to state 94
    HEX_LIT     shift, and go to state 95
    REAL_LIT    shift, and go to state 96
    ID          shift, and go to state 97

    literal     go to state 98
    expression  go to state 117


State 86

  103 expression: MULTI • ID

    ID  shift, and go to state 118


State 87

  101 expression: ADDRESS • ID
  102           | ADDRESS • ID OPENBRACKET expression CLOSEBRACKET

    ID  shift, and go to state 119


State 88

  104 expression: LENGTH • ID LENGTH

    ID  shift, and go to state 120


State 89

  105 expression: OPENPAREN • expression CLOSEPAREN

    NULLL       shift, and go to state 82
    CALL        shift, and go to state 83
    NOT         shift, and go to state 84
    MINUS       shift, and go to state 85
    MULTI       shift, and go to state 86
    ADDRESS     shift, and go to state 87
    LENGTH      shift, and go to state 88
    OPENPAREN   shift, and go to state 89
    B_TRUE      shift, and go to state 90
    B_FALSE     shift, and go to state 91
    CHAR_LIT    shift, and go to state 92
    STRING_LIT  shift, and go to state 93
    DEC_LIT     shift, and go to state 94
    HEX_LIT     shift, and go to state 95
    REAL_LIT    shift, and go to state 96
    ID          shift, and go to state 97

    literal     go to state 98
    expression  go to state 121


State 90

   44 literal: B_TRUE •

    $default  reduce using rule 44 (literal)


State 91

   45 literal: B_FALSE •

    $default  reduce using rule 45 (literal)


State 92

   46 literal: CHAR_LIT •

    $default  reduce using rule 46 (literal)


State 93

   47 literal: STRING_LIT •

    $default  reduce using rule 47 (literal)


State 94

   43 literal: DEC_LIT •

    $default  reduce using rule 43 (literal)


State 95

   48 literal: HEX_LIT •

    $default  reduce using rule 48 (literal)


State 96

   49 literal: REAL_LIT •

    $default  reduce using rule 49 (literal)


State 97

  106 expression: ID •
  107           | ID • OPENBRACKET expression CLOSEBRACKET

    OPENBRACKET  shift, and go to state 122

    $default  reduce using rule 106 (expression)


State 98

  109 expression: literal •

    $default  reduce using rule 109 (expression)


State 99
